# uCNC-machineSimModule

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README.md  RENDER_ROBOT.md  ROBOT_KINEMATICS.md  actor.c  actor.h  api.c  api.h  assembly.c  assembly.h  base.stl  camera.c  camera.h  config.c  config.h  config.xml  light.c  light.h  link7.stl  loader.c  loader.h  lvgl_test.c  lvgl_test.h  main.c  meca500_config.txt  render_robot.c  renderer.c  renderer.h  robot_kinematics.c  show_fps.c  simulator.code-workspace  test.c  tinygl_interface.c  tinygl_interface.h  utils.c  (+2 more)
cncvis/: AGENTS.md  CMakeLists.txt  README.md  actor.c  actor.h  api.c  api.h  assembly.c  assembly.h  camera.c  camera.h  cncvis  cncvis.h  config.c  config.h  light.c  light.h  osd.c  osd.h  utils.c  utils.h
cncvis/libstlio/: .gitignore  CMakeLists.txt  Makefile  Makefile.FREEBSD  Makefile.LINUX  Makefile.SUPPORTED  Makefile.WIN32MINGW  README.md
cncvis/libstlio/include/: serdeshelper.h  stlio.h
cncvis/libstlio/src/: stlio.c  stlioErrorStrings.c
cncvis/libstlio/tests/: Makefile  test001_serdeshelper.c  test002_LoadSTL.c  test003_LoadStoreSTL.c  test004_LoadSTLASCII.c  test005_ASCIIToBinary.c  test006_BinaryToASCII.c  test007_ReadWrapperCallback.c  test008_ReadWrapperMem.c  test009_WriteFileMem.c
cncvis/libstlio/tools/: Makefile  stl2ascii.c  stl2bin.c
cncvis/machines/meca500/: config.xml
cncvis/mxml/: CMakeLists.txt  config-lnx.h.in  config.h.lnx.in
cncvis/mxml/include/mxml/: config.h
cncvis/mxml/vcnet/: mxml4.def
cncvis/tinygl/: CMakeLists.txt
cncvis/tinygl/include/GL/: gl.h  glu.h
cncvis/tinygl/src/: api.c  font8x8_basic.h  glu.c  matrix.c  opinfo.h  zbuffer.c  zgl.h
main/src/: app.c  app.h  main.c  main.h
main/src/ui/: ui_app.c  ui_app.h  ui_common.c  ui_common.h  ui_dashboard.c  ui_dashboard.h  ui_footer.c  ui_footer.h  ui_header.c  ui_header.h  ui_navigation.c  ui_navigation.h
main/src/ui/cnc/: cnc_communication.c  cnc_communication.h  cnc_state_machine.c  cnc_state_machine.h
main/src/ui/data/: data_manager.c  data_manager.h
main/src/ui/pages/: ui_diagnostics_page.c  ui_diagnostics_page.h  ui_mdi_page.c  ui_mdi_page.h  ui_offsets_page.c  ui_offsets_page.h  ui_programs.c  ui_programs.h  ui_settings_page.c  ui_settings_page.h  ui_status_page.c  ui_status_page.h  ui_visualization_page.c  ui_visualization_page.h
main/src/ui/styles/: ui_styles.c  ui_styles.h
main/src/ui/utils/: config.c  config.h  error_handling.c  error_handling.h  logger.c  logger.h  user_profiles.c  user_profiles.h
